decreased cache size of scheduleCreator

--- a/report/lastpaper/mainmatter/demo_results.tex
+++ b/report/lastpaper/mainmatter/demo_results.tex
@@ -15,5 +15,5 @@ We utilized the joint model fitted to the PRIAS dataset to schedule biopsies in 
 
 \begin{figure}
 \centerline{\includegraphics{images/demo_schedule.eps}}
-\caption{\textbf{Demonstration of personalized schedules for a real PRIAS patient:} In \textbf{Panel~A}: Time of last negative biopsy is year 3.5 (vertical green solid line). Longitudinal data is repeated DRE (blue triangles) and PSA measurements (blue circles). The current visit is year five (vertical black dashed line). The estimated cumulative-risk profile is shown with a solid red line (95\%CI is shaded). It is 6\% at the current visit and 16.5\% at year ten (horizon). In \textbf{Panel~B}, we visualize different biopsy schedules, with a `B' indicating a biopsy. \textbf{Risk: 10\%} and \textbf{Risk: $\kappa^*(v)$} are personalized biopsy schedules using a fixed risk threshold $\kappa^*=10\%$, and automatically chosen $\kappa^*(v)$ (Equation~\ref{eq:kappa_choice}), respectively. \textbf{PRIAS} and \textbf{Annual} denote the PRIAS biopsy schedule (paragraph~2 of Section~\ref{sec:results}) and annual biopsy schedule. \textbf{Panel~C,D}: For personalized, PRIAS, and annual biopsy schedules, we calculate the corresponding expected number of tests and expected time delay in detecting progression. A compulsory biopsy at year ten was planned in all schedules for a fair comparison of expected time delay.}\label{fig:demo_schedule}
+\caption{\textbf{Demonstration of personalized schedules for a real PRIAS patient:} In \textbf{Panel~A}: Time of last negative biopsy is year 3.5 (vertical green solid line). Longitudinal data is repeated DRE (blue triangles) and PSA measurements (blue circles). The current visit is year five (vertical black dashed line). The estimated cumulative-risk profile is shown with a solid red line (95\%CI is shaded). It is 6\% at the current visit and 16.5\% at year ten (horizon). In \textbf{Panel~B}, we visualize different biopsy schedules, with a `B' indicating a biopsy. \textbf{Risk: 10\%} and \textbf{Risk: $\kappa^*(v)$} are personalized biopsy schedules using a fixed risk threshold $\kappa^*=10\%$, and automatically chosen $\kappa^*(v)$~(\ref{eq:kappa_choice}), respectively. \textbf{PRIAS} and \textbf{Annual} denote the PRIAS biopsy schedule (paragraph~2 of Section~\ref{sec:results}) and annual biopsy schedule. \textbf{Panel~C,D}: For personalized, PRIAS, and annual biopsy schedules, we calculate the corresponding expected number of tests and expected time delay in detecting progression. A compulsory biopsy at year ten was planned in all schedules for a fair comparison of expected time delay.}\label{fig:demo_schedule}
 \end{figure}
