--- a/report/lastpaper/mainmatter/sim_study.tex
+++ b/report/lastpaper/mainmatter/sim_study.tex
@@ -4,7 +4,7 @@
 Although we demonstrated personalized schedules for a real patient, we also intend to analyze and compare personalized and fixed schedules in a full cohort. The criteria for comparison of schedules are the total number of invasive tests planned, and the actual time delay in detection of progression for each schedule. However, due to the periodical nature of schedules, the actual time delay in detection of progression cannot be observed in real-world surveillance. Hence, instead, we compare personalized versus fixed schedules via an extensive simulated randomized clinical trial in which each hypothetical patient undergoes each schedule. To keep our simulation study realistic, we employ the prostate cancer active surveillance scenario. More specifically, our simulated population is manifested by the fitted joint model obtained using the PRIAS cohort (Web-Appendix~B.3).
 
 \subsection{Simulation Setup}
-From the simulation population, we first sample 500 datasets, each representing a hypothetical prostate cancer active surveillance program with 1000 patients in it. We generate a true cancer progression time for each of the ${\mbox{500} \times \mbox{1000}}$ patients and then sample a set of longitudinal DRE and PSA measurements at the same follow-up visit times as given in the PRIAS protocol. We then split each dataset into training (750 patients) and test (250 patients) parts, and generate a random and non‐informative censoring time for the training patients. All test and training patients also observe Type-I censoring at year ten of follow-up (current study period of PRIAS). We next fit a joint model of the same specification as the model fitted to PRIAS (Web-Appendix~B.3), to each of the 500 training datasets and obtain MCMC samples from the 500 sets of the posterior distribution of the parameters. In each of the 500 hypothetical surveillance programs, we utilize the corresponding fitted joint models to develop the profiles for cumulative-risk of progression in each of the ${\mbox{500} \times \mbox{250}}$ test patients. This cumulative-risk is further used to create personalized biopsy schedules for the test patients. For each test patient, we conduct biopsies using personalized biopsy schedules based on two fixed risk thresholds, namely, $\kappa^*=5\%$ and $\kappa^*=10\%$, and an automatically chosen visit-specific $\kappa^*(v)$ (Equation~\ref{eq:kappa_choice}) with a constraint of 6 months on expected time delay in detection of progression. We also conduct biopsies according to the currently practiced PRIAS and annual schedules. We decide biopsies only on the standard PSA follow-up visits (Section~\ref{sec:results}) utilizing clinical data accumulated only until that visit. Also, we maintain a minimum recommended gap of one year between consecutive prostate biopsies~\citep{bokhorst2015compliance}. Biopsies are conducted until progression is detected, or the maximum follow-up period at year ten (horizon) is reached. The actual time delay in detection of progression is equal to the time at which progression is detected minus the actual (simulated) time of progression of a patient.
+From the simulation population, we first sample 500 datasets, each representing a hypothetical prostate cancer active surveillance program with 1000 patients in it. We generate a true cancer progression time for each of the ${\mbox{500} \times \mbox{1000}}$ patients and then sample a set of longitudinal DRE and PSA measurements at the same follow-up visit times as given in the PRIAS protocol. We then split each dataset into training (750 patients) and test (250 patients) parts, and generate a random and non‐informative censoring time for the training patients. All test and training patients also observe Type-I censoring at year ten of follow-up (current study period of PRIAS). We next fit a joint model of the same specification as the model fitted to PRIAS (Web-Appendix~B.3), to each of the 500 training datasets and obtain MCMC samples from the 500 sets of the posterior distribution of the parameters. In each of the 500 hypothetical surveillance programs, we utilize the corresponding fitted joint models to develop the profiles for cumulative-risk of progression in each of the ${\mbox{500} \times \mbox{250}}$ test patients. This cumulative-risk is further used to create personalized biopsy schedules for the test patients. For each test patient, we conduct biopsies using personalized biopsy schedules based on two fixed risk thresholds, namely, $\kappa^*=5\%$ and $\kappa^*=10\%$, and a third automatically chosen visit-specific $\kappa^*(v)$ (~\ref{eq:kappa_choice}) with a constraint of 6 months on expected time delay in detection of progression. We also conduct biopsies according to the currently practiced PRIAS and annual schedules. We decide biopsies only on the standard PSA follow-up visits (Section~\ref{sec:results}) utilizing clinical data accumulated only until that visit. Also, we maintain a minimum recommended gap of one year between consecutive prostate biopsies~\citep{bokhorst2015compliance}. Biopsies are conducted until progression is detected, or the maximum follow-up period at year ten (horizon) is reached. The actual time delay in detection of progression is equal to the time at which progression is detected minus the actual (simulated) time of progression of a patient.
 
 \subsection{Results}
 Since the simulated cohorts are based on PRIAS, roughly only 50\% of the patients progress in the ten year study period. While we are able to calculate the total number of biopsies scheduled in all $500 \times 250$ test patients, but the time delay in detection of progression is available only for those patients who progress in ten years (\textit{progressing}). Hence, we show the simulation results separately for \textit{progressing} and \textit{non-progressing} patients in Panel~A, and Panel~B of Figure~\ref{fig:simulation_boxplot}, respectively.
